# Convertepub

./: .gitignore  README.md  build.spec  pyproject.toml  requirements.txt
src/: config.py  i18n.py  logging_setup.py  main.py
src/core/: acsm_parser.py  activation.py  converter.py
src/core/adept/: ineptepub.py  libadobeFulfill.py
src/gui/: donate.py  main_window.py
src/gui/dialogs/: about_dialog.py  settings_dialog.py
src/gui/widgets/: conversion_list.py  drop_zone.py
src/workers/: conversion_worker.py
